# api/gen/restapi/operations/user/community_history_responses.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package user
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/SpenserCai/sd-webui-discord/api/gen/models"
+)
+
+// CommunityHistoryOKCode is the HTTP code returned for type CommunityHistoryOK
+const CommunityHistoryOKCode int = 200
+
+/*
+CommunityHistoryOK Success
+
+swagger:response communityHistoryOK
+*/
+type CommunityHistoryOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.HistoryList `json:"body,omitempty"`
+}
+
+// NewCommunityHistoryOK creates CommunityHistoryOK with default headers values
+func NewCommunityHistoryOK() *CommunityHistoryOK {
+
+	return &CommunityHistoryOK{}
+}
+
+// WithPayload adds the payload to the community history o k response
+func (o *CommunityHistoryOK) WithPayload(payload *models.HistoryList) *CommunityHistoryOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the community history o k response
+func (o *CommunityHistoryOK) SetPayload(payload *models.HistoryList) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CommunityHistoryOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
