# website/src/api/account.js
@@ -3,7 +3,7 @@
  * @Date: 2023-10-02 21:33:34
  * @version: 
  * @LastEditors: SpenserCai
- * @LastEditTime: 2023-10-06 17:23:54
+ * @LastEditTime: 2023-10-09 21:26:30
  * @Description: file content
  */
 import request from "@/utils/request";
@@ -18,6 +18,14 @@ export function userinfo() {
 export function userhistory(body) {
   return request({
     url: "/user_history",
+    method: "post",
+    data: body
+  });
+}
+
+export function communityhistory(body) {
+  return request({
+    url: "/community_history",
     method: "post",
     data: body
   });
